[package]
name = "file-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/mod.rs"

[dependencies]
# https://github.com/flosse/rust-web-framework-comparison
actix = { version = "0.13" }
actix-web = { version = "4" } # https://actix.rs/docs/getting-started
actix-web-actors = { version = "4.3" }
async-channel = { version = "2.1" }
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
clap ={ version = "4.4.13", features = ["derive", "env"] }
chrono = { version = "0.4" }
dirs = { version = "5.0" }
env_logger ={ version = "0.10" }
lazy_static = { version = "1.4" }
log ={ version = "0.4"}
once_cell = { version = "1.19" }
rand ={ version = "*" }
reqwest = { version = "0.11", features = ["blocking"]}
sha256 = { version = "1.5"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlite ={ version = "0.32" }
tide = { version="0.16" }
tide-websockets = { version="0.4" }
timer ={ version = "0.2" }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
websocket ={ version = "0.27" }
